force-app/main/default/objects/selectTypeMetricOrSkill__mdt/selectTypeMetricOrSkill__mdt.object-meta.xml
<CustomObject>
    <description>Created for storing values of Select Type Picklist</description>
    <label>selectTypeMetricOrSkill</label>
    <pluralLabel>selectTypeMetricOrSkill</pluralLabel>
</CustomObject>