force-app/main/default/objects/selectTypeMetricOrSkill__mdt/fields/Select_an_Performance_Period__c.field-meta.xml
<CustomField>
    <fullName>Select_an_Performance_Period__c</fullName>
    <label>Select an Performance Period Metric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YTD</fullName>
                <default>true</default>
                <label>YTD</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Rolling 12 Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>