force-app/main/default/objects/selectTypeMetricOrSkill__mdt/fields/Select_an_Performance_Period_Skills__c.field-meta.xml
<CustomField>
    <fullName>Select_an_Performance_Period_Skills__c</fullName>
    <label>Select an Performance Period Skills</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
                <default>true</default>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Bi-Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>