force-app/main/default/objects/selectTypeMetricOrSkill__mdt/fields/Select_Type__c.field-meta.xml
<CustomField>
    <fullName>Select_Type__c</fullName>
    <label>Select Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metrics</fullName>
                <default>true</default>
                <label>Metrics</label>
            </value>
            <value>
                <fullName>Skills</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>