force-app/main/default/objects/selectTypeMetricOrSkill__mdt/fields/SelectSkillMenu__c.field-meta.xml
<CustomField>
    <fullName>SelectSkillMenu__c</fullName>
    <label>SelectSkillMenu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery</fullName>
                <default>true</default>
                <label>Discovery</label>
            </value>
            <value>
                <fullName>Presenting</fullName>
            </value>
            <value>
                <fullName>Negotiation</fullName>
            </value>
            <value>
                <fullName>Salesforce CRM Updating</fullName>
            </value>
            <value>
                <fullName>Needs Analysis</fullName>
            </value>
            <value>
                <fullName>Communication Skills</fullName>
            </value>
            <value>
                <fullName>Team Player</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>RFP/RFI Requests</fullName>
            </value>
            <value>
                <fullName>Competitive Positioning</fullName>
            </value>
            <value>
                <fullName>Working Relationship</fullName>
            </value>
            <value>
                <fullName>Forecasting</fullName>
            </value>
            <value>
                <fullName>Sales Support Resources</fullName>
            </value>
            <value>
                <fullName>Accountability</fullName>
            </value>
            <value>
                <fullName>Expense Report</fullName>
            </value>
            <value>
                <fullName>Trusted Advisor</fullName>
            </value>
            <value>
                <fullName>Professionalism</fullName>
            </value>
            <value>
                <fullName>Product Knowledge</fullName>
            </value>
            <value>
                <fullName>Territory/Account Plan</fullName>
            </value>
            <value>
                <fullName>Timely Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>